--- a/UnitedGlowHaven/Views/Shared/_Layout.cshtml
+++ b/UnitedGlowHaven/Views/Shared/_Layout.cshtml
@@ -11,16 +11,30 @@
 
 <body class="bg-primary">
     <header>
-        <nav class="navbar">
-        <div class="container border-bottom"> 
-            <a class="navbar-brand" asp-controller="Home" asp-action="Index">
-                <img src="~/images/UGHlogo.png" width="150" height="150" alt="Logo UGH">
-            </a>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            </form>
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-3">
+                    <a class="navbar-brand" asp-controller="Home" asp-action="Index">
+                        <img src="~/images/UGHlogo.png" width="150" height="150" alt="Logo UGH">
+                    </a>
+                </div>
+                <div class="col align-self-center">
+                    <form role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    </form>
+                </div>
+                <div class="col-1 d-flex align-items-center">
+                    <a class="nav-link" asp-controller="home" asp-action="Index">
+                        <img src="~/images/cart2.svg" width="40" />
+                    </a>
+                </div>
+                <div class="col-1 d-flex align-items-center">
+                    <a class="nav-link" asp-controller="home" asp-action="Index">
+                        <img src="~/images/person.svg" width="40" />
+                    </a>
+                </div>
+            </div>
         </div>
-        </nav>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-custom bg-primary">
             <div class="container border-bottom">
                 <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarCustom">
@@ -57,7 +71,7 @@
             </div>
         </nav>
     </header>
-        
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
