creation of Product View + ViewModel. Initial Create of rest of Models

--- a/UnitedGlowHaven/Views/Home/Index.cshtml
+++ b/UnitedGlowHaven/Views/Home/Index.cshtml
@@ -28,6 +28,7 @@
         @for (int i = 0; i < 8; i++)
         {
             <div class="card bg-custom-lighter p-2" style="width: 16rem; height: 28rem;">
+                <a href="#">
                 <img class="card-img-top" src="~/images/tshirt.jpg" alt="Card image cap" style="height:20rem">
                 <div class="card-body">
                     <ul class="list-group">
@@ -35,6 +36,7 @@
                         <li class="list-group-item bg-custom-lighter list-group-item-product">Prijs</li>
                     </ul>
                 </div>
+                </a>
             </div>
         }
     </div>
