--- a/UnitedGlowHaven/Views/Shared/_Layout.cshtml
+++ b/UnitedGlowHaven/Views/Shared/_Layout.cshtml
@@ -46,25 +46,25 @@
                             <a class="nav-link" asp-controller="home" asp-action="Index">home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="over" asp-action="Index">over</a>
+                            <a class="nav-link" asp-controller="about" asp-action="Index">over</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="broeken" asp-action="Index">broeken</a>
+                            <a class="nav-link" asp-controller="categorie" asp-action="broeken">broeken</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="t-shirts" asp-action="Index">t-shirts</a>
+                            <a class="nav-link" asp-controller="categorie" asp-action="t-shirts">t-shirts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="rokken" asp-action="Index">rokken</a>
+                            <a class="nav-link" asp-controller="categorie" asp-action="rokken">rokken</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="kleedjes" asp-action="Index">kleedjes</a>
+                            <a class="nav-link" asp-controller="categorie" asp-action="kleedjes">kleedjes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="jassen" asp-action="Index">jassen</a>
+                            <a class="nav-link" asp-controller="categorie" asp-action="jassen">jassen</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="truien" asp-action="Index">truien</a>
+                            <a class="nav-link" asp-controller="categorie" asp-action="truien">truien</a>
                         </li>
                     </ul>
                 </div>
