--- a/UnitedGlowHaven/Views/Product/Details.cshtml
+++ b/UnitedGlowHaven/Views/Product/Details.cshtml
@@ -1,15 +1,24 @@
-﻿@model UnitedGlowHaven.ViewModels.ProductDetailsViewModel
+﻿@model UnitedGlowHaven.ViewModels.ProductDetailsViewModel;
+@{
+    ViewData["Title"] = @Model.Naam;
+}
 
-<h1>@Model.Naam</h1>
 
-<div class="card bg-custom-lighter p-2" style="height: 28rem;">
-        <img class="card-img-top" src="@Model.Afbeelding" alt="Card image cap" style="height:20rem">
-        <div class="card-body">
+<div class="card flex-row flex-wrap bg-custom-lighter p-2">
+        <div class="card-header">
+        <img src="@Model.Afbeelding" alt="Card image cap" style="width: 30rem;"/>
+        </div>
+        <div class="card-block">
+        <div class="card-block px-2">
+            <h4 class="card-title">@Model.Naam</h4>
             <ul class="list-group">
                 <li class="list-group-item bg-custom-lighter list-group-item-product">Productnummer : @Model.ProductNummer</li>
-            <li class="list-group-item bg-custom-lighter list-group-item-product">Prijs : @Model.Prijs €</li>
+                <li class="list-group-item bg-custom-lighter list-group-item-product">Prijs : @Model.Prijs €</li>
                 <li class="list-group-item bg-custom-lighter list-group-item-product">Beschrijving : @Model.Beschrijving</li>
             </ul>
+            @*<a href="#" class="btn btn-primary">BUTTON</a>*@
+        </div>
+            
         </div>
 </div>
 
