pictures for pants

--- a/UnitedGlowHaven/Views/Shared/_Layout.cshtml
+++ b/UnitedGlowHaven/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                             <a class="nav-link" asp-controller="about" asp-action="Index">over</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="categorie" asp-action="Index">broeken</a>
+                            <a class="nav-link" asp-controller="categorie" asp-action="Index" asp-route-id=1>broeken</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="categorie" asp-action="Index" asp-route-id=2>t-shirts</a>
