--- a/UnitedGlowHaven/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/UnitedGlowHaven/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -20,6 +20,37 @@
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Input.Voornaam"></label>
+                <input asp-for="Input.Voornaam" class="form-control" />
+                <span asp-validation-for="Input.Voornaam" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Achternaam"></label>
+                <input asp-for="Input.Achternaam" class="form-control" />
+                <span asp-validation-for="Input.Achternaam" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Straat"></label>
+                <input asp-for="Input.Straat" class="form-control" />
+                <span asp-validation-for="Input.Straat" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Huisnummer"></label>
+                <input asp-for="Input.Huisnummer" class="form-control" />
+                <span asp-validation-for="Input.Huisnummer" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Postocde"></label>
+                <input asp-for="Input.Postocde" class="form-control" />
+                <span asp-validation-for="Input.Postocde" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Gemeente"></label>
+                <input asp-for="Input.Gemeente" class="form-control" />
+                <span asp-validation-for="Input.Gemeente" class="text-danger"></span>
+            </div>
+
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
     </div>
