--- a/UnitedGlowHaven/Views/Shared/_Layout.cshtml
+++ b/UnitedGlowHaven/Views/Shared/_Layout.cshtml
@@ -1,6 +1,4 @@
-﻿@*@model UnitedGlowHaven.ViewModels.CategorieViewModel;*@
-
-
+﻿
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,15 +25,20 @@
                     </form>
                 </div>
                 <div class="col-1 d-flex align-items-center">
-                    <a class="nav-link" asp-controller="home" asp-action="Index">
+                    <a class="nav-link" asp-controller="Winkelmand" asp-action="Index">
                         <img src="~/images/cart2.svg" width="40" />
                     </a>
                 </div>
                 <div class="col-1 d-flex align-items-center">
-                        
                         <partial name="_LoginPartial" />
                 </div>
-                
+                <div class="nav-item dropdown col-1 d-flex align-items-center">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Admin </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" asp-controller="Admin" asp-action="Producten">Producten</a>
+                        <a class="dropdown-item" asp-controller="Gebruiker" asp-action="Index">Gebruikers</a>
+                    </div>
+                </div>
             </div>
         </div>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-custom bg-primary">
@@ -58,16 +61,16 @@
                             <a class="nav-link" asp-controller="categorie" asp-action="Index" asp-route-id=2>t-shirts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="categorie" asp-action="rokken">rokken</a>
+                            <a class="nav-link" asp-controller="categorie" asp-action="Index" asp-route-id=3>rokken</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="categorie" asp-action="kleedjes">kleedjes</a>
+                            <a class="nav-link" asp-controller="categorie" asp-action="Index" asp-route-id=4>kleedjes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="categorie" asp-action="jassen">jassen</a>
+                            <a class="nav-link" asp-controller="categorie" asp-action="Index" asp-route-id=5>jassen</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="categorie" asp-action="truien">truien</a>
+                            <a class="nav-link" asp-controller="categorie" asp-action="Index" asp-route-id=6>truien</a>
                         </li>
                     </ul>
                 </div>
