--- a/UnitedGlowHaven/Views/Admin/ProductCreate.cshtml
+++ b/UnitedGlowHaven/Views/Admin/ProductCreate.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<form asp-action="ProductCreate" method="post">
+<form asp-action="ProductCreate" method="post" enctype="multipart/form-data">
     <div class="row mt-5">
         <div class="col-md-6">
             <div class="form-group">
@@ -36,9 +36,9 @@
                 <span asp-validation-for="Beschrijving" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Afbeelding" class="control-label">@Html.DisplayNameFor(model => this.Model.Afbeelding)</label>
-                <input asp-for="Afbeelding" class="form-control" />
-                <span asp-validation-for="Afbeelding" class="text-danger"></span>
+                <label asp-for="ImageFile" class="control-label">@Html.DisplayNameFor(model => this.Model.ImageFile)</label>
+                <input asp-for="ImageFile" accept="image/*" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Prijs" class="control-label">@Html.DisplayNameFor(model => this.Model.Prijs)</label>
