--- a/UnitedGlowHaven/Views/Product/Details.cshtml
+++ b/UnitedGlowHaven/Views/Product/Details.cshtml
@@ -6,7 +6,7 @@
 
 <div class="card flex-row flex-wrap bg-custom-lighter p-2">
         <div class="card-header">
-        <img src="@Model.Afbeelding" alt="Card image cap" style="width: 30rem;"/>
+        <img src="/images/@Model.Afbeelding" alt="Card image cap" style="width: 30rem;"/>
         </div>
         <div class="card-block">
         <div class="card-block px-2">
@@ -16,19 +16,28 @@
                 <li class="list-group-item bg-custom-lighter list-group-item-product">Prijs : @Model.Prijs €</li>
                 <li class="list-group-item bg-custom-lighter list-group-item-product">Beschrijving : @Model.Beschrijving</li>
                 <li class="list-group-item bg-custom-lighter list-group-item-product">Kleur : @Model.Kleur.Naam</li>
-                <div class="dropdown show">
-                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Maat
-                    </a>
-                    
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        @foreach (var productmaat in Model.ProductMaten)
-                        {
-                            <a class="dropdown-item" href="#">@productmaat.Maat.Naam</a>
-                        }
-                    </div>
-                </div>
+                
             </ul>
+
+            <div class="form-group px-2">
+                <label>Maat: </label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                    @foreach (var productMaat in Model.ProductMaten)
+                    {
+                        <option id="@productMaat.ProductMaatId">@productMaat.Maat.Naam</option>
+                    }
+                </select>
+            </div>
+            @*<div class="form-group">
+                <label for="Aantal">Aantal</label>
+                <input type="number" class="form-control" id="aantal" placeholder="aantal" max="">
+            </div>*@
+             
+            @*<div class="form-group">
+                <label asp-for="this.Model." class="control-label">@Html.DisplayNameFor(model => this.Model.KleurId)</label>
+                <input asp-for="KleurId" class="form-control" />
+                <span asp-validation-for="KleurId" class="text-danger"></span>
+            </div>*@
             <form asp-controller="Winkelmand" asp-action="NieuwWinkelmandProduct">
                 <input type="hidden" asp-for="ProductId"/>
                 <input type="submit" value="kopen" class="btn btn-primary"/>
