--- a/UnitedGlowHaven/Views/Admin/ProductCreate.cshtml
+++ b/UnitedGlowHaven/Views/Admin/ProductCreate.cshtml
@@ -27,6 +27,11 @@
                 <input asp-for="KleurId" class="form-control" />
                 <span asp-validation-for="KleurId" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="MaatId" class="control-label">@Html.DisplayNameFor(model => this.Model.MaatId)</label>
+                <input asp-for="MaatId" class="form-control" />
+                <span asp-validation-for="MaatId" class="text-danger"></span>
+            </div>
            
         </div>
         <div class="col-md-6">
