--- a/UnitedGlowHaven/Views/Home/Index.cshtml
+++ b/UnitedGlowHaven/Views/Home/Index.cshtml
@@ -7,12 +7,12 @@
     <div class="row">
         <div class="col-sm">
             <ul class="list-group bg-transparent">
-                <a class="list-group-item list-group-item-action bg-transparent" asp-controller="home" asp-action="Index">broeken</a>
-                <a class="list-group-item list-group-item-action bg-transparent" asp-controller="home" asp-action="Index">t-shirts</a>
-                <a class="list-group-item list-group-item-action bg-transparent" asp-controller="home" asp-action="Index">rokken</a>
-                <a class="list-group-item list-group-item-action bg-transparent" asp-controller="home" asp-action="Index">kleedjes</a>
-                <a class="list-group-item list-group-item-action bg-transparent" asp-controller="home" asp-action="Index">jassen</a>
-                <a class="list-group-item list-group-item-action bg-transparent" asp-controller="home" asp-action="Index">truien</a>
+                <a class="list-group-item list-group-item-action bg-transparent" asp-controller="categorie" asp-action="Index" asp-route-id=1>broeken</a>
+                <a class="list-group-item list-group-item-action bg-transparent" asp-controller="categorie" asp-action="Index" asp-route-id=2>t-shirts</a>
+                <a class="list-group-item list-group-item-action bg-transparent" asp-controller="categorie" asp-action="Index" asp-route-id=3>rokken</a>
+                <a class="list-group-item list-group-item-action bg-transparent" asp-controller="categorie" asp-action="Index" asp-route-id=4>kleedjes</a>
+                <a class="list-group-item list-group-item-action bg-transparent" asp-controller="categorie" asp-action="Index" asp-route-id=5>jassen</a>
+                <a class="list-group-item list-group-item-action bg-transparent" asp-controller="categorie" asp-action="Index" asp-route-id=6>truien</a>
             </ul>
         </div>
         <div class="col-sm">
