--- a/UnitedGlowHaven/Views/Product/Details.cshtml
+++ b/UnitedGlowHaven/Views/Product/Details.cshtml
@@ -16,31 +16,13 @@
                 <li class="list-group-item bg-custom-lighter list-group-item-product">Prijs : @Model.Prijs €</li>
                 <li class="list-group-item bg-custom-lighter list-group-item-product">Beschrijving : @Model.Beschrijving</li>
                 <li class="list-group-item bg-custom-lighter list-group-item-product">Kleur : @Model.Kleur.Naam</li>
+                <li class="list-group-item bg-custom-lighter list-group-item-product">Maat : @Model.Maat.Naam</li>
                 
             </ul>
 
-            <div class="form-group px-2">
-                <label>Maat: </label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                    @foreach (var productMaat in Model.ProductMaten)
-                    {
-                        <option id="@productMaat.ProductMaatId">@productMaat.Maat.Naam</option>
-                    }
-                </select>
-            </div>
-            @*<div class="form-group">
-                <label for="Aantal">Aantal</label>
-                <input type="number" class="form-control" id="aantal" placeholder="aantal" max="">
-            </div>*@
-             
-            @*<div class="form-group">
-                <label asp-for="this.Model." class="control-label">@Html.DisplayNameFor(model => this.Model.KleurId)</label>
-                <input asp-for="KleurId" class="form-control" />
-                <span asp-validation-for="KleurId" class="text-danger"></span>
-            </div>*@
-            <form asp-controller="Winkelmand" asp-action="NieuwWinkelmandProduct">
+             <form asp-controller="Winkelmand" asp-action="NieuwWinkelmandProduct">
                 <input type="hidden" asp-for="ProductId"/>
-                <input type="submit" value="kopen" class="btn btn-primary"/>
+                <input type="submit" value="kopen" class="btn btn-primary" style="width: 100%"/>
             </form>
         </div>
             
