--- a/UnitedGlowHaven/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/UnitedGlowHaven/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -41,9 +41,9 @@
                 <span asp-validation-for="Input.Huisnummer" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.Postocde"></label>
-                <input asp-for="Input.Postocde" class="form-control" />
-                <span asp-validation-for="Input.Postocde" class="text-danger"></span>
+                <label asp-for="Input.Postcode"></label>
+                <input asp-for="Input.Postcode" class="form-control" />
+                <span asp-validation-for="Input.Postcode" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.Gemeente"></label>
