--- a/UnitedGlowHaven/Views/Gebruiker/Create.cshtml
+++ b/UnitedGlowHaven/Views/Gebruiker/Create.cshtml
@@ -23,6 +23,11 @@
                 <span asp-validation-for="Achternaam" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="UserName" class="control-label text-primary"></label>
+                <input asp-for="UserName" class="form-control" />
+                <span asp-validation-for="UserName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
