--- a/UnitedGlowHaven/Views/Product/Details.cshtml
+++ b/UnitedGlowHaven/Views/Product/Details.cshtml
@@ -5,10 +5,10 @@
 
 
 <div class="card flex-row flex-wrap bg-custom-lighter p-2">
-        <div class="card-header">
-        <img src="/images/@Model.Afbeelding" alt="Card image cap" style="width: 30rem;"/>
-        </div>
-        <div class="card-block">
+    <div class="card-header">
+        <img src="/images/@Model.Afbeelding" alt="Card image cap" style="width: 30rem;" />
+    </div>
+    <div class="card-block">
         <div class="card-block px-2">
             <h4 class="card-title">@Model.Naam</h4>
             <ul class="list-group">
@@ -16,35 +16,26 @@
                 <li class="list-group-item bg-custom-lighter list-group-item-product">Prijs : @Model.Prijs €</li>
                 <li class="list-group-item bg-custom-lighter list-group-item-product">Beschrijving : @Model.Beschrijving</li>
                 <li class="list-group-item bg-custom-lighter list-group-item-product">Kleur : @Model.Kleur.Naam</li>
-                
+                <li class="list-group-item bg-custom-lighter list-group-item-product">Maat : @Model.Maat.Naam</li>
             </ul>
 
-            <div class="form-group px-2">
-                <label>Maat: </label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                    @foreach (var productMaat in Model.ProductMaten)
-                    {
-                        <option id="@productMaat.ProductMaatId">@productMaat.Maat.Naam</option>
-                    }
-                </select>
-            </div>
-            @*<div class="form-group">
-                <label for="Aantal">Aantal</label>
-                <input type="number" class="form-control" id="aantal" placeholder="aantal" max="">
-            </div>*@
-             
-            @*<div class="form-group">
-                <label asp-for="this.Model." class="control-label">@Html.DisplayNameFor(model => this.Model.KleurId)</label>
-                <input asp-for="KleurId" class="form-control" />
-                <span asp-validation-for="KleurId" class="text-danger"></span>
-            </div>*@
-            <form asp-controller="Winkelmand" asp-action="NieuwWinkelmandProduct">
-                <input type="hidden" asp-for="ProductId"/>
-                <input type="submit" value="kopen" class="btn btn-primary"/>
-            </form>
+            @if (this.User.Identity.IsAuthenticated)
+            {
+                <form asp-controller="Winkelmand" asp-action="NieuwWinkelmandProduct">
+                    <input type="hidden" asp-for="ProductId" />
+                    <input type="submit" value="kopen" class="btn btn-primary" style="width: 100%" />
+                </form>
+            }
+            else
+            {
+                <a asp-controller="Winkelmand" asp-action="Index"
+               class="btn btn-primary" style="width: 100%">
+                    login
+                </a>
+                <small class="text-muted">testtesttest</small>
+            }
         </div>
-            
-        </div>
+    </div>
 </div>
 
 @Html.ActionLink("Terug", "Index", "Product");
